# summarizer-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker-image-release.yml
