[tool.poetry]
package-mode = false
name = "summarizer-bot"
description = "Telegram bot that you can add into chats, and it will summarize messages in it"
authors = ["Roman Poltorabatko <r.m.poltorabatko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.6.0"
openai = "^1.28.1"
pydantic = "^2.7.1"
beanie = "^1.26.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = "pydantic.mypy"